# autonomous-robots-rwu

./: README.md  my_bashrc
docker/: Dockerfile  docker-compose.yml
maps/: tiago_firstmap.pgm  tiago_firstmap.yaml  tiago_firstmap.yml
src/Stage_1/: turtlebot_topics
src/Stage_1/drive_to_wall/drive_to_wall/: drive_to_wall_node.py
src/Stage_1/follow_wall/follow_wall/: follow_wall_node.py
src/Stage_1/wall_follower_advanced/: setup.py
src/autorace_real_stage_1/autorace_real/autorace_real/: start_signal_real.py
src/stage_1/drive_to_wall/: package.xml
src/stage_1/drive_to_wall/drive_to_wall/: drive_to_wall_node.py
src/stage_1/follow_wall/: package.xml
src/stage_1/wall_follower_advanced/: package.xml  setup.cfg
src/stage_1/wall_follower_advanced/wall_follower_advanced/: wall_follower_advanced_node.py
src/stage_2/: smiley.py
src/stage_2/autorace_real/: package.xml  setup.py
src/stage_2/autorace_real/autorace_real/: follow_wall_real.py
src/stage_2/rainbow_circle/: package.xml  setup.cfg  setup.py
src/stage_2/rainbow_circle/rainbow_circle/: multithreading_node.py  single_threading_node.py
src/stage_3/collision_avoidance/: package.xml  setup.py
src/stage_3/custom_interfaces/: CMakeLists.txt  package.xml
src/stage_3/custom_interfaces/action/: TravelNoCrashing.action
src/stage_3/custom_interfaces/msg/: DangerZones.msg
src/stage_3/custom_interfaces/srv/: SetZoneSize.srv
src/stage_4/my_nav2/: package.xml  setup.py
src/stage_4/my_nav2/my_nav2/: goal_pub.py
src/stage_4/tf_follower/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
